Add text box and layout

--- a/calc.html
+++ b/calc.html
@@ -1,7 +1,14 @@
+<div class = "main">
 <div class="context">
     <h1>College Acceptance Calculator</h1>
 </div>
-
+<div class = "textbox">
+  <p>Enter College Name:</p>
+ <div class ="tb" align = "center" >
+  <input type="text" id="ip2"/>
+  </div>
+  
+</div>
 
 <div class="area" >
         <ul class="circles">
@@ -17,6 +24,8 @@
                 <li></li>
         </ul>
 </div >
+
+</div>
 
 <form id="myForm">
         <input type="file" id="csvFile" accept=".csv" />
@@ -71,3 +80,4 @@
           reader.readAsText(input);
         });
       </script>
+
